--- a/configuration.gradle
+++ b/configuration.gradle
@@ -11,14 +11,15 @@ def testConfig = [
 ]
 
 def libraryConfig = [
-        version: '0.9.0'
+        version: '0.9.0',
+        preReleaseVersion: '0.9.2'
 ]
 
 def mavenConfig = [
         localUrl                 : System.getenv('MAVEN_URL_LOCAL'),
         groupId                  : 'universum.studios.android',
         artifactId               : 'settings',
-        version                  : /*libraryConfig.version*/'0.9.1',
+        version                  : libraryConfig.preReleaseVersion,
         packaging                : 'pom',
         projectName              : 'Android Settings',
         projectDescription       : 'Extended and common settings components for the Android Platform.',
