--- a/configuration.gradle
+++ b/configuration.gradle
@@ -7,12 +7,13 @@ def buildConfig = [
 ]
 
 def testConfig = [
-        instrumentationRunner: 'android.support.test.runner.AndroidJUnitRunner'
+        //instrumentationRunner: 'android.support.test.runner.AndroidJUnitRunner'
+        instrumentationRunner: 'universum.studios.android.test.MultiDexAndroidJUnitRunner'
 ]
 
 def libraryConfig = [
         version          : '0.9.0',
-        preReleaseVersion: '0.9.2'
+        preReleaseVersion: '0.9.3'
 ]
 
 def mavenConfig = [
