--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,13 +1,14 @@
 // Defines dependencies used across the library project.
 def versions = [
         androidSupportVersion                : '25.3.0',
+        androidSupportMultiDexVersion        : '1.0.1',
         androidSupportTestVersion            : '0.5',
         androidSupportTestEspressoVersion    : '2.2.2',
         universumStudiosWidgetAdaptersVersion: '1.0.1',
         universumStudiosGraphicsVersion      : '1.0.0',
         universumStudiosUIVersion            : '0.9.1',
         universumStudiosFontVersion          : '1.0.0',
-        universumStudiosDialogsVersion       : '0.9.1',
+        universumStudiosDialogsVersion       : '0.9.2',
         universumStudiosSamplesVersion       : '0.1.3',
         universumStudiosFragmentsVersion     : '1.0.1',
         butterknifeVersion                   : '8.5.1',
@@ -18,12 +19,14 @@ def versions = [
 ext.versions = versions
 
 def androidSupport = [
-        annotations   : "com.android.support:support-annotations:${versions.androidSupportVersion}",
-        v4            : "com.android.support:support-v4:${versions.androidSupportVersion}",
-        appCompatV7   : "com.android.support:appcompat-v7:${versions.androidSupportVersion}",
-        vectorDrawable: "com.android.support:support-vector-drawable:${versions.androidSupportVersion}",
-        recyclerView  : "com.android.support:recyclerview-v7:${versions.androidSupportVersion}",
-        design        : "com.android.support:design:${versions.androidSupportVersion}"
+        multiDex               : "com.android.support:multidex:${versions.androidSupportMultiDexVersion}",
+        multiDexInstrumentation: "com.android.support:multidex-instrumentation:${versions.androidSupportMultiDexVersion}",
+        annotations            : "com.android.support:support-annotations:${versions.androidSupportVersion}",
+        v4                     : "com.android.support:support-v4:${versions.androidSupportVersion}",
+        appCompatV7            : "com.android.support:appcompat-v7:${versions.androidSupportVersion}",
+        vectorDrawable         : "com.android.support:support-vector-drawable:${versions.androidSupportVersion}",
+        recyclerView           : "com.android.support:recyclerview-v7:${versions.androidSupportVersion}",
+        design                 : "com.android.support:design:${versions.androidSupportVersion}"
 ]
 
 def annotationProcessor = [
