--- a/test-core/build.gradle
+++ b/test-core/build.gradle
@@ -45,6 +45,9 @@ android {
  * Library dependencies ============================================================================
  */
 dependencies {
+    // Android MultiDex Instrumentation test dependencies.
+    compile deps.androidSupport.multiDex
+    compile deps.androidSupport.multiDexInstrumentation
     // Android Instrumentation test dependencies.
     compile deps.test.androidSupportAnnotations
     compile deps.test.androidRunner
