--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,7 +4,7 @@ def versions = [
         androidSupportMultiDexVersion        : '1.0.1',
         androidSupportTestVersion            : '0.5',
         androidSupportTestEspressoVersion    : '2.2.2',
-        universumStudiosWidgetAdaptersVersion: '1.0.1',
+        universumStudiosWidgetAdaptersVersion: '2.0.0-beta1',
         universumStudiosGraphicsVersion      : '1.0.0',
         universumStudiosUIVersion            : '0.9.1',
         universumStudiosFontVersion          : '1.0.0',
@@ -47,8 +47,9 @@ def test = [
 
 def universumStudios = [
         widgetAdaptersCore    : "universum.studios.android:widget-adapters-core:${versions.universumStudiosWidgetAdaptersVersion}@aar",
+        widgetAdaptersHolder  : "universum.studios.android:widget-adapters-holder:${versions.universumStudiosWidgetAdaptersVersion}@aar",
+        widgetAdaptersSimple  : "universum.studios.android:widget-adapters-simple:${versions.universumStudiosWidgetAdaptersVersion}@aar",
         widgetAdaptersList    : "universum.studios.android:widget-adapters-list:${versions.universumStudiosWidgetAdaptersVersion}@aar",
-        widgetAdaptersListBase: "universum.studios.android:widget-adapters-list-base:${versions.universumStudiosWidgetAdaptersVersion}@aar",
         widgetAdaptersSpinner : "universum.studios.android:widget-adapters-spinner:${versions.universumStudiosWidgetAdaptersVersion}@aar",
         graphicsColorUtil     : "universum.studios.android:graphics-color-util:${versions.universumStudiosGraphicsVersion}@aar",
         ui                    : "universum.studios.android:ui:${versions.universumStudiosUIVersion}@aar",
