--- a/library-activity/build.gradle
+++ b/library-activity/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     compile deps.universumStudios.fontCore
     compile deps.universumStudios.fontUtil
     compile deps.universumStudios.widgetAdaptersCore
+    compile deps.universumStudios.widgetAdaptersHolder
+    compile deps.universumStudios.widgetAdaptersSimple
     compile deps.universumStudios.widgetAdaptersList
     releaseCompile "universum.studios.android:settings-core:${config.library.version}@aar"
 
